feat: safety issue

--- a/secret.properties
+++ b/secret.properties
@@ -1,4 +1,4 @@
 [DEFAULT]
 OPENAI_API_KEY=??API_KEY
 OPENAI_BASE_URL=??API_URL
-GITHUB_API_KEY=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
+GITHUB_API_KEY=??API_KEY
